k8s/base/evidently/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evidently-ui

spec:
  replicas: 1

  selector:
    matchLabels:
      app: evidently-ui

  template:
    metadata:
      labels:
        app: evidently-ui

    spec:
      securityContext:
        runAsUser: 1000      # L'utilisateur avec lequel le processus tourne
        fsGroup: 1000        # Ceci donne les droits au groupe 1000 sur tout le volume monté
      containers:
        - name: evidently-ui
          image: docker.io/library/accidents_severity-evidently:1.0
          #imagePullPolicy: IfNotPresent
          # Configuration pour forcer l'utilisation de l'image locale
          imagePullPolicy: Never
          resources:
            # Le request réserve physiquement la mémoire
            # Le request vérifie que le CPU restant >= cpu sinon il ne démarre pas le pod
            # d'où la faible valeur car on a bcp de services
            requests:
              memory: "256Mi" # Ce qu'il demande au démarrage
              cpu: "50m"      # 0.05 vCPU
            limits:
              memory: "1Gi"   # Le plafond à ne pas dépasser
              cpu: "1000m"    # 1.0 vCPU maximum

          #workingDir: /app/data/evidently/accidents_severity-ws

          # Pas de workingDir ici, on le gère dans la commande pour plus de sécurité
          #command: ["/bin/sh", "-c", "sleep 3600"]
          command: ["/bin/sh", "-c"]
          args:
            - "/app/monitoring/.venv/bin/evidently ui --workspace /app/data/evidently/accidents_severity-ws --port 8000 --host 0.0.0.0"
          # "." correspond au répertoire courant donc le workingDir
          #command:
          #  - evidently
          #  - ui
          #  - --workspace
          #  - "."
          #  - --port
          #  - "8000"
          #  - --host
          #  - "0.0.0.0"

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15

          volumeMounts:
            - name: workspace
              mountPath: /app/data/evidently
              #mountPath: /workspace

      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: evidently-pvc
